--- a/golang-web/templates/index.html
+++ b/golang-web/templates/index.html
@@ -1,20 +1,7 @@
 {{ define "Index" }}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-</head>
-<nav class="navbar navbar-light bg-light mb-4">
-    <a class="navbar-brand" href="/">Alura Loja</a>
-</nav>
+{{template "_head"}}
+{{template "_menu"}}
 
 <body>
     <div class="container">
@@ -27,6 +14,7 @@
                             <th>Descrição</th>
                             <th>Preço</th>
                             <th>Quantidade</th>
+                            <th>Editar</th>
                             <th>Ações</th>
                         </tr>
                     </thead>
@@ -37,6 +25,11 @@
                                 <td>{{.Descricao}}</td>
                                 <td>{{.Preco}}</td>
                                 <td>{{.Quantidade}}</td>
+                                <td>
+                                    <a href="edit?id={{.Id}}" class="btn btn-info">
+                                        Edit
+                                    </a>
+                                </td>
                                 <td>
                                     <button class="btn btn-danger" onclick="onDelete('{{.Id}}')">
                                         Deletar
