Cria a função de atualizar o produto

--- a/golang-web/templates/edit.html
+++ b/golang-web/templates/edit.html
@@ -10,7 +10,7 @@
                 <p class="lead">Insira os dados para atualizar</p>
             </div>
         </div>
-        <form method="POST" action="insert">
+        <form method="POST" action="update">
             <input type="hidden" name="id" value="{{.Id}}">
             <div class="row">
                 <div class="col-sm-8">
